# ClassGenerator-C-

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp  vcpkg.json
cmake/: BuildExample.cmake
include/: ClassGen.h  ConsoleResolver.h  ErrorEvents.h
include/AccessEntity/: AccessBuilder.h  AccessEntity.h  AccessGenerator.h  AccessValidator.h
include/DefaultEntity/: DefaultBuilder.h  DefaultEntity.h  DefaultGenerator.h  DefaultValidator.h
tests/: FunctionGenTests.cpp  VariableGenTests.cpp
tests/AccessEntity/: AliasGenTests.cpp  ClassGenTests.cpp  FieldGenTests.cpp  MethodsGenTests.cpp
tests/DefaultEntity/: FunctionGenTests.cpp  VariableGenTests.cpp
tests/DefaultEntity/Validators/: VariableGenTests.cpp
